# dockerfiles

./: Makefile
3.10/: Dockerfile  pyproject.toml
3.11/: Dockerfile  ipython_vim_bindings.py  pyproject.toml
3.11-arch/: Dockerfile  ipython_config.py  pyproject.toml
3.7/: Dockerfile  pyproject.toml
python/3.10/: Dockerfile  pyproject.toml
python/3.10-pytorch-cuda/: Dockerfile  pyproject.toml
python/3.11/: Dockerfile  pyproject.toml
python/3.11-arch/: ipython_vim_bindings.py
python/3.11-cuda/: Dockerfile  pyproject.toml
python/3.12/: Dockerfile
r/4.3.1/: Dockerfile
rust/1.74.1/: Dockerfile
rust/1.80.0/: Dockerfile
rust/1.87.0/: Dockerfile
