[tool.poetry]
name = "python"
version = "0.1.0"
description = "General use python 3.10 container"
authors = ["ayorgo"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^7.30.1"
notebook = "^6.4.6"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
plotly = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
