[tool.poetry]
name = "python-docker"
version = "0.1.0"
description = "General use python 3.11 container"
authors = ["ayorgo"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "3.11.4"
ipython = "^8.14.0"
notebook = "^6.5.4"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
plotly = "^5.15.0"
pyperclip = "^1.8.2"
graphviz = "^0.20.1"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"
jupyterlab = "^4.0.3"
jupyterlab-vim = "^0.16.0"
ipywidgets = "^8.0.7"
urllib3 = "^2.0.3"
torch = {version = "^2.0.1+cpu", source = "torch-cpu"}

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
