[tool.poetry]
name = "python"
version = "0.1.0"
description = "General use python 3.10 container"
authors = ["ayorgo"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.30.1"
notebook = "^6.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
