[tool.poetry]
name = "python-docker"
version = "0.2.0"
description = "General use python 3.10 container"
authors = ["ayorgo"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "3.10.4"
ipython = "8.13.2"
notebook = "6.5.4"
pandas = "2.0.1"
matplotlib = "3.7.1"
plotly = "5.14.1"
pyperclip = "1.8.2"
graphviz = "0.19.1"
scikit-learn = "1.2.2"
scipy = "1.10.1"
jupyterlab = "3.6.3"
jupyterlab-vim = "0.16.0"
ipywidgets = "8.0.6"
urllib3 = "1.26.16"
torch = {version = "^2.0.1+cpu", source = "torch-cpu"}

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
