[tool.poetry]
name = "python-docker"
version = "0.1.0"
description = "General use python 3.11 container"
authors = ["ayorgo"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "3.11.4"
ipython = "^8.14.0"
notebook = "^6.5.4"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
plotly = "^5.15.0"
pyperclip = "^1.8.2"
graphviz = "^0.20.1"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"
jupyterlab = "^4.0.3"
jupyterlab-vim = "^0.16.0"
ipywidgets = "^8.0.7"
urllib3 = "^2.0.3"
black = "^23.7.0"
isort = "^5.12.0"
pytorch-ignite = "^0.4.12"
tensorboard = "^2.14.0"
tensorboardx = "^2.6.2.2"
tqdm = "^4.66.1"
ydata-profiling = "^4.5.1"
torch = "^2.0.1"
torchaudio = "^2.0.2"
torchvision = "^0.15.2"
transformers = "^4.35.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
